etc/k8s/simple/client-ms.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-ms
  labels:
    app: client-ms
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-ms
  template:
    metadata:
      labels:
        app: client-ms
    spec:
      containers:
      - name: client-ms
        image: fabiojapa/node-http-test:2.0.1
        ports:
        - containerPort: 3000
---

apiVersion: v1
kind: Service
metadata:
  name: client-ms
  labels:
    app: client-ms
spec:
  ports:
  - port: 80
    targetPort: 3000
    protocol: TCP
    name: http
  selector:
    app: client-ms
