etc/k8s/simple/canary.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: canary
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: country
    nginx.ingress.kubernetes.io/canary-by-header-value: MX
    # nginx.ingress.kubernetes.io/canary-weight: "80"
spec:
  rules:
  - host: sakanary.io
    http:
      paths:
      - backend:
          serviceName: canary
          servicePort: 80
