etc/k8s/simple/canary.istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: canary-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sakanary.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: canary
spec:
  hosts:
  - "sakanary.io"
  gateways:
  - canary-gateway
  http:
  - match:
    - headers:
        country:
          exact: MX
    route:
    - destination:
        host: canary
        port:
          number: 80
      weight: 50
    - destination:
        host: production
        port:
          number: 80
      weight: 50
