etc/k8s/simple/production.istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: production-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "sakanary.io"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: production
spec:
  hosts:
  - "sakanary.io"
  gateways:
  - production-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: production
        port:
          number: 80
